--- a/index.html
+++ b/index.html
@@ -4,26 +4,87 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>MovieHub</title>
 </head>
+
 <body>
 
-   <div class ="container">
-      <div class="navbar">
-         <img src="css/img/mh.png" class="logo">
-          <nav>
-              <ul>
-                  <li><a href="#">ГЛАВНАЯ</a></li>
-                  <li><a href="#">ЖАНР</a></li>
-                  <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
-                  <li><a href="#">FAQ</a></li>
-              </ul>
-          </nav>
-          <img src="css/img/menu.png" class="menu-icon">
-      </div>
-   </div>
+    <div class="container">
+        <div class="navbar">
+            <img src="img/mh.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="#" class="down">ЖАНР <span class="material-symbols-outlined">
+                                expand_more
+                            </span></a>
+                        <ul class="submenu">
+                            <li><a href="">Боевик</a></li>
+                            <li><a href="">Вестерн</a></li>
+                            <li><a href="">Детектив</a></li>
+                            <li><a href="">Драма</a></li>
+                            <li><a href="">Исторический фильм</a></li>
+                            <li><a href="">Комедия</a></li>
+                            <li><a href="">Мелодрама</a></li>
+                            <li><a href="">Нуар</a></li>
+                            <li><a href="">Сказка</a></li>
+                            <li><a href="">Трагедия</a></li>
+                            <li><a href="">Трагикомедя</a></li>
+                            <li><a href="">Ужасы</a></li>
 
-</body>
-</html>
+                        </ul>
+
+
+                    </li>
+                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </nav>
+            <img src="img/menu.png" class="menu-icon">
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>MovieHub</h1>
+                <p>На нашем сайте вы можете бесплатно посмотреть фильмы!</p>
+                <button type="button">Перейти к просмотру</button>
+            </div>
+            <div class="col">
+                <a href="index1.html">
+                    <div class="card card1">
+                        <h5>
+                            Аквамен
+                        </h5>
+                    </div>
+                </a>
+                <a href="index2.html">
+                    <div class="card card2">
+                        <h5>
+                            Джокер
+                        </h5>
+                    </div>
+                </a>
+                <a href="index3.html">
+                    <div class="card card3">
+                        <h5>
+                            Паркер
+                        </h5>
+                    </div>
+                </a>
+                <a href="index4.html">
+                    <div class="card card4">
+                        <h5>
+                            Титаник
+                        </h5>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+
+</body></html>
