--- a/filmpage/Aquaman.html
+++ b/filmpage/Aquaman.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="films.css">
+    <link rel="stylesheet" href="../style/films.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +15,16 @@
 
     <div class="container">
         <div class="navbar">
-            <a href="index.html"> <img src="img/mh.png" class="logo"> </a>
+            <a href="../index.html"> <img src="../style/img/mh.png" class="logo"> </a>
             <nav>
                 <ul>
-                    <li><a href="index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="../index.html">ГЛАВНАЯ</a></li>
                     <li><a href="#">ЖАНР</a></li>
                     <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
-            <img src="img/menu.png" class="menu-icon">
+            <img src="../style/img/menu.png" class="menu-icon">
         </div>
         <div class="row">
             <div class="card">
