--- a/filmpage/filmpage.html
+++ b/filmpage/filmpage.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="js/random.js"> </script>
     <title>MovieHub</title>
 </head>
 
@@ -16,10 +15,10 @@
 
     <div class="container">
         <div class="navbar">
-            <img src="style/img/mh.png" class="logo">
+            <img src="../style/img/mh.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="../index.html">ГЛАВНАЯ</a></li>
                     <li><a href="#" class="down">ЖАНР <span class="material-symbols-outlined">
                                 expand_more
                             </span></a>
@@ -41,51 +40,91 @@
 
 
                     </li>
-                    <li><a href="#" onclick="randomSite();">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
-            <img src="style/img/menu.png" class="menu-icon">
+            <img src="../style/img/menu.png" class="menu-icon">
         </div>
         <div class="row">
             <div class="col">
-                <h1>MovieHub</h1>
-                <a href="filmpage/filmpage.html">
-                    <p>На нашем сайте вы можете бесплатно посмотреть фильмы!</p>
-                    <button type="button">Перейти к просмотру</button>
-                </a>
+                <p>Здесь собраны все наши фильмы!</p>
             </div>
             <div class="col">
-                <a href="filmpage/Aquaman.html">
+                <a href="Aquaman.html">
                     <div class="card card1">
                         <h5>
                             Аквамен
                         </h5>
                     </div>
                 </a>
-                <a href="filmpage/Joker.html">
+                <a href="Joker.html">
                     <div class="card card2">
                         <h5>
                             Джокер
                         </h5>
                     </div>
                 </a>
-                <a href="filmpage/Parker.html">
+                <a href="Parker.html">
                     <div class="card card3">
                         <h5>
                             Паркер
                         </h5>
                     </div>
                 </a>
-                <a href="filmpage/Titanik.html">
+                <a href="Titanik.html">
                     <div class="card card4">
                         <h5>
                             Титаник
                         </h5>
                     </div>
                 </a>
+                   <a href="Spirited_Away.html">
+                    <div class="card card5">
+                        <h5>
+                            Унесенныя призраками
+                        </h5>
+                    </div>
+                     </a>
+                     <a href="green_mile"></a>
+                     <a href="Green_mile.html">
+                    <div class="card card6">
+                        <h5>
+                            Зеленая миля
+                        </h5>
+                    </div>
+                    </a>
+                   <a href="invencivel.html">
+                       <div class="card card7">
+                        <h5>
+                            Несломленный
+                        </h5>
+                    </div>
+                    </a>
+                    <a href="Forest_gamp.html">
+                       <div class="card card8">
+                        <h5>
+                            Форест Гамп
+                        </h5>
+                    </div>
+                    </a>
+                    <a href="Avengers.html">
+                    <div class="card card9">
+                        <h5>
+                            Мстители
+                        </h5>
+                    </div>
+                    </a>
+                    <a href="Avatar.html">
+                    <div class="card card10">
+                        <h5>
+                            Аватар
+                        </h5>
+                    </div>
+                    </a>
 
             </div>
+
 
         </div>
 
