--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="js/random.js"> </script>
+    <script src="filmpage/js/random.js"> </script>
     <title>MovieHub</title>
 </head>
 
