--- a/filmpage/Spirited_away.html
+++ b/filmpage/Spirited_away.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="card">
-                <img src="films/aquaman.jpg" alt="">
+                <img src="films/spirited_away.jpg" alt="">
             </div>
             <div class="info">
                 <h5>Унесенныя призраками</h5>
