--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     </li>
                     <li><a href="#" onclick="randomSite();">СЛУЧАЙНОСТЬ</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                 </ul>
             </nav>
             <img src="style/img/menu.png" class="menu-icon">
