--- a/filmpage/Aquaman.html
+++ b/filmpage/Aquaman.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <script src="../filmpage/js/random.js"> </script>
     <title>MovieHub</title>
 </head>
 
@@ -20,15 +21,15 @@
                 <ul>
                     <li><a href="../index.html">ГЛАВНАЯ</a></li>
                     <li><a href="#">ЖАНР</a></li>
-                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#" onclick="randomSite();">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="../faq.html">FAQ</a></li>
                 </ul>
             </nav>
             <img src="../style/img/menu.png" class="menu-icon">
         </div>
         <div class="row">
             <div class="card">
-                <img src="films/aquaman.jpg" alt="">
+                <img src="../style/img/films/aquaman.jpg" alt="">
             </div>
             <div class="info">
                 <h5>Аквамен</h5>
