--- a/filmpage/filmpage.html
+++ b/filmpage/filmpage.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat+Alternates:ital,wght@1,500&family=Montserrat:ital,wght@0,700;1,400&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="../filmpage/js/random.js"> </script>
     <title>MovieHub</title>
 </head>
 
@@ -40,8 +41,8 @@
 
 
                     </li>
-                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#" onclick="randomSite();">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="../faq.html">FAQ</a></li>
                 </ul>
             </nav>
             <img src="../style/img/menu.png" class="menu-icon">
@@ -50,7 +51,7 @@
             <div class="col">
                 <p>Здесь собраны все наши фильмы!</p>
             </div>
-            <div class="col">
+            <div class="colfilms">
                 <a href="Aquaman.html">
                     <div class="card card1">
                         <h5>
@@ -119,6 +120,20 @@
                     <div class="card card10">
                         <h5>
                             Аватар
+                        </h5>
+                    </div>
+                    </a>
+                    <a href="star_wars.html">
+                    <div class="card card11">
+                        <h5>
+                            Звездные войны
+                        </h5>
+                    </div>
+                    </a>
+                    <a href="hobbit.html">
+                    <div class="card card12">
+                        <h5>
+                            Хоббит
                         </h5>
                     </div>
                     </a>
